unpackaged/main/default/objects/Account/fields/AAA_200_Miles_Premier_Tow__c.field-meta.xml
<CustomField>
    <fullName>AAA_200_Miles_Premier_Tow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>200 Mile Premier Tow</label>
    <type>Checkbox</type>
</CustomField>