unpackaged/main/default/objects/Account/fields/AAA_Special_Member_Type__c.field-meta.xml
<CustomField>
    <fullName>AAA_Special_Member_Type__c</fullName>
    <label>Special Member Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AAA Flex</fullName>
            </value>
            <value>
                <fullName>Motorcycle</fullName>
            </value>
            <value>
                <fullName>Trailer</fullName>
            </value>
            <value>
                <fullName>VIP</fullName>
            </value>
            <value>
                <fullName>AAA Basic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>