unpackaged/main/default/objects/Account/fields/AAR_Display_Address__c.field-meta.xml
<CustomField>
    <fullName>AAR_Display_Address__c</fullName>
    <formula>BillingStreet + &#39;, &#39; + BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AAR Display Address</label>
    <type>Text</type>
</CustomField>