unpackaged/main/default/objects/Account/fields/AAR_Specialist__c.field-meta.xml
<CustomField>
    <fullName>AAR_Specialist__c</fullName>
    <label>AAR Specialist</label>
    <length>255</length>
    <type>Text</type>
</CustomField>