unpackaged/main/default/objects/Account/fields/ACA_AAA_Suffix__c.field-meta.xml
<CustomField>
    <fullName>ACA_AAA_Suffix__c</fullName>
    <description>This contains the Suffix for the account i.e. Sr. Jr.</description>
    <inlineHelpText>This contains the Suffix for the account i.e. Sr. Jr.</inlineHelpText>
    <label>Suffix</label>
    <length>16</length>
    <type>Text</type>
</CustomField>