unpackaged/main/default/objects/Account/fields/ACG_AAA_Location__c.field-meta.xml
<CustomField>
    <fullName>ACG_AAA_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created to store Insurance Agent AAA location. Used in Insurance policies and Surveys.</description>
    <label>AAA Location</label>
    <referenceTo>AAA_Location__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>