unpackaged/main/default/objects/Account/fields/ACG_AAA_Membership__c.field-meta.xml
<CustomField>
    <fullName>ACG_AAA_Membership__c</fullName>
    <externalId>true</externalId>
    <label>AAA Membership #</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>