unpackaged/main/default/objects/Account/fields/ACG_Address_Type__c.field-meta.xml
<CustomField>
    <fullName>ACG_Address_Type__c</fullName>
    <label>Address Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mailing</fullName>
                <default>true</default>
                <label>Mailing</label>
            </value>
            <value>
                <fullName>Work</fullName>
            </value>
            <value>
                <fullName>Delivery</fullName>
            </value>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Temp</fullName>
                <isActive>false</isActive>
                <label>Temp</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>