unpackaged/main/default/objects/Account/fields/ACG_Address_Type_Detail__c.field-meta.xml
<CustomField>
    <fullName>ACG_Address_Type_Detail__c</fullName>
    <label>Address Type Detail</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ACG_Address_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>U.S.</fullName>
                <default>true</default>
                <label>U.S.</label>
            </value>
            <value>
                <fullName>Foreign</fullName>
            </value>
            <value>
                <fullName>Military</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>