unpackaged/main/default/objects/Account/fields/ACG_Alternate_Phone__c.field-meta.xml
<CustomField>
    <fullName>ACG_Alternate_Phone__c</fullName>
    <label>Alternate Phone</label>
    <type>Phone</type>
</CustomField>