unpackaged/main/default/objects/Account/fields/ACG_Billing_State_and_Zip__c.field-meta.xml
<CustomField>
    <fullName>ACG_Billing_State_and_Zip__c</fullName>
    <formula>BillingState +&#39; &#39;+ BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing State and Zip</label>
    <type>Text</type>
</CustomField>