unpackaged/main/default/objects/Account/fields/ACG_Cell_Phone__c.field-meta.xml
<CustomField>
    <fullName>ACG_Cell_Phone__c</fullName>
    <label>Cell Phone</label>
    <type>Phone</type>
</CustomField>