unpackaged/main/default/objects/Account/fields/ACG_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>ACG_Date_of_Birth__c</fullName>
    <description>Source:POC</description>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>