unpackaged/main/default/objects/Account/fields/ACG_Does_Not_Have__c.field-meta.xml
<CustomField>
    <fullName>ACG_Does_Not_Have__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked if Member Doesn&#39;t have Email</description>
    <inlineHelpText>to be checked if Member Doesn&#39;t have Email</inlineHelpText>
    <label>Does Not Have Email</label>
    <type>Checkbox</type>
</CustomField>