unpackaged/main/default/objects/Account/fields/ACG_Entitlements_Allotted__c.field-meta.xml
<CustomField>
    <fullName>ACG_Entitlements_Allotted__c</fullName>
    <label>Max Entitlements Allotted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>