unpackaged/main/default/objects/Account/fields/ACG_Entitlements_Used__c.field-meta.xml
<CustomField>
    <fullName>ACG_Entitlements_Used__c</fullName>
    <label>Entitlements Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>