unpackaged/main/default/objects/Account/fields/ACG_ERS_Entitlements__c.field-meta.xml
<CustomField>
    <fullName>ACG_ERS_Entitlements__c</fullName>
    <label>ERS Entitlements</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>