unpackaged/main/default/objects/Account/fields/ACG_Foreign_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>ACG_Foreign_Postal_Code__c</fullName>
    <description>Source:POC</description>
    <label>Foreign Postal Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>