unpackaged/main/default/objects/Account/fields/ACG_Gender__c.field-meta.xml
<CustomField>
    <fullName>ACG_Gender__c</fullName>
    <description>Source:POC</description>
    <label>Gender</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>M</fullName>
            </value>
            <value>
                <fullName>F</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>