unpackaged/main/default/objects/Account/fields/ACG_Household_Id__c.field-meta.xml
<CustomField>
    <fullName>ACG_Household_Id__c</fullName>
    <description>used in conjunction with ACG_is_Primary_household__c field for primary member address roll up</description>
    <label>Household Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>