unpackaged/main/default/objects/Account/fields/ACG_Is_Primary_Member_in_Household__c.field-meta.xml
<CustomField>
    <fullName>ACG_Is_Primary_Member_in_Household__c</fullName>
    <defaultValue>false</defaultValue>
    <description>if this personAccount is primary member for a household</description>
    <inlineHelpText>is this a primary member in the household ?</inlineHelpText>
    <label>Is Primary Member in Household</label>
    <type>Checkbox</type>
</CustomField>