unpackaged/main/default/objects/Account/fields/ACG_Joined_AAA__c.field-meta.xml
<CustomField>
    <fullName>ACG_Joined_AAA__c</fullName>
    <label>Joined AAA</label>
    <type>Date</type>
</CustomField>