unpackaged/main/default/objects/Account/fields/ACG_Member_ID__c.field-meta.xml
<CustomField>
    <fullName>ACG_Member_ID__c</fullName>
    <externalId>true</externalId>
    <label>Member ID</label>
    <length>32</length>
    <type>Text</type>
</CustomField>