unpackaged/main/default/objects/Account/fields/ACG_Membership_Product__c.field-meta.xml
<CustomField>
    <fullName>ACG_Membership_Product__c</fullName>
    <label>Membership Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Plus</fullName>
            </value>
            <value>
                <fullName>Plus-RV</fullName>
            </value>
            <value>
                <fullName>Premier</fullName>
            </value>
            <value>
                <fullName>Premier-RV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>