unpackaged/main/default/objects/Account/fields/ACG_Membership_Type__c.field-meta.xml
<CustomField>
    <fullName>ACG_Membership_Type__c</fullName>
    <label>Membership Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Personal</fullName>
            </value>
            <value>
                <fullName>Gift</fullName>
            </value>
            <value>
                <fullName>Fleet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>