unpackaged/main/default/objects/Account/fields/ACG_Military_City__c.field-meta.xml
<CustomField>
    <fullName>ACG_Military_City__c</fullName>
    <label>Military City</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ACG_Address_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>APO</fullName>
            </value>
            <value>
                <fullName>DPO</fullName>
            </value>
            <value>
                <fullName>FPO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>