unpackaged/main/default/objects/Account/fields/ACG_Military_City_Detail__c.field-meta.xml
<CustomField>
    <fullName>ACG_Military_City_Detail__c</fullName>
    <label>Military City Detail</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ACG_Address_Type_Detail__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AA-Armed Forces Americas</fullName>
            </value>
            <value>
                <fullName>AE-Armed Forces Other</fullName>
            </value>
            <value>
                <fullName>AP-Armed Forces Pacific</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>