unpackaged/main/default/objects/Account/fields/ACG_Prefix__c.field-meta.xml
<CustomField>
    <fullName>ACG_Prefix__c</fullName>
    <label>Prefix</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MR</fullName>
            </value>
            <value>
                <fullName>MRS</fullName>
            </value>
            <value>
                <fullName>MS</fullName>
            </value>
            <value>
                <fullName>DR</fullName>
            </value>
            <value>
                <fullName>REV</fullName>
            </value>
            <value>
                <fullName>SR</fullName>
            </value>
            <value>
                <fullName>FR</fullName>
            </value>
            <value>
                <fullName>HON</fullName>
            </value>
            <value>
                <fullName>MAJ</fullName>
            </value>
            <value>
                <fullName>LT</fullName>
            </value>
            <value>
                <fullName>1LT</fullName>
            </value>
            <value>
                <fullName>2LT</fullName>
            </value>
            <value>
                <fullName>COL</fullName>
            </value>
            <value>
                <fullName>CRP</fullName>
            </value>
            <value>
                <fullName>CDR</fullName>
            </value>
            <value>
                <fullName>ADM</fullName>
            </value>
            <value>
                <fullName>BGN</fullName>
            </value>
            <value>
                <fullName>SGT</fullName>
            </value>
            <value>
                <fullName>MST</fullName>
            </value>
            <value>
                <fullName>LTC</fullName>
            </value>
            <value>
                <fullName>RET</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>