unpackaged/main/default/objects/Account/fields/ACG_Primary_Phone_Type__c.field-meta.xml
<CustomField>
    <fullName>ACG_Primary_Phone_Type__c</fullName>
    <label>Primary Phone Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Work</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>