unpackaged/main/default/objects/Account/fields/ACG_Priority_Service__c.field-meta.xml
<CustomField>
    <fullName>ACG_Priority_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Priority Service</label>
    <type>Checkbox</type>
</CustomField>