unpackaged/main/default/objects/Account/fields/ACG_Suffix__c.field-meta.xml
<CustomField>
    <fullName>ACG_Suffix__c</fullName>
    <description>Source_POC</description>
    <label>Suffix</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CPA</fullName>
            </value>
            <value>
                <fullName>DAV</fullName>
            </value>
            <value>
                <fullName>DC</fullName>
            </value>
            <value>
                <fullName>DD</fullName>
            </value>
            <value>
                <fullName>DDS</fullName>
            </value>
            <value>
                <fullName>DMD</fullName>
            </value>
            <value>
                <fullName>DO</fullName>
            </value>
            <value>
                <fullName>DPM</fullName>
            </value>
            <value>
                <fullName>DVM</fullName>
            </value>
            <value>
                <fullName>ENS</fullName>
            </value>
            <value>
                <fullName>ESQ</fullName>
            </value>
            <value>
                <fullName>FMA</fullName>
            </value>
            <value>
                <fullName>JR</fullName>
            </value>
            <value>
                <fullName>LPN</fullName>
            </value>
            <value>
                <fullName>MD</fullName>
            </value>
            <value>
                <fullName>OD</fullName>
            </value>
            <value>
                <fullName>OP</fullName>
            </value>
            <value>
                <fullName>OS</fullName>
            </value>
            <value>
                <fullName>OSF</fullName>
            </value>
            <value>
                <fullName>PA</fullName>
            </value>
            <value>
                <fullName>PHD</fullName>
            </value>
            <value>
                <fullName>RET</fullName>
            </value>
            <value>
                <fullName>RN</fullName>
            </value>
            <value>
                <fullName>RTD</fullName>
            </value>
            <value>
                <fullName>SGT</fullName>
            </value>
            <value>
                <fullName>SR</fullName>
            </value>
            <value>
                <fullName>USN</fullName>
            </value>
            <value>
                <fullName>2nd</fullName>
            </value>
            <value>
                <fullName>3rd</fullName>
            </value>
            <value>
                <fullName>I</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>