unpackaged/main/default/objects/Account/fields/Approved_Garage_Type__c.field-meta.xml
<CustomField>
    <fullName>Approved_Garage_Type__c</fullName>
    <description>AAR = Approved Auto Repair; 
ADR = Approved Dealer Repair; 
AAB = Approved Auto Body; 
AAG = Approved Auto Glass; 
COR = Club Owned Repair; 
DTC = Discount Tire Company; 
MPR = Member Preferred Repair;</description>
    <inlineHelpText>AAR = Approved Auto Repair; 
ADR = Approved Dealer Repair; 
AAB = Approved Auto Body; 
AAG = Approved Auto Glass; 
COR = Club Owned Repair; 
DTC = Discount Tire Company; 
MPR = Member Preferred Repair;</inlineHelpText>
    <label>Approved Garage Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AAR</fullName>
            </value>
            <value>
                <fullName>ADR</fullName>
            </value>
            <value>
                <fullName>AAB</fullName>
            </value>
            <value>
                <fullName>AAG</fullName>
            </value>
            <value>
                <fullName>COR</fullName>
            </value>
            <value>
                <fullName>DTC</fullName>
            </value>
            <value>
                <fullName>MPR</fullName>
            </value>
            <value>
                <fullName>ERS</fullName>
                <isActive>false</isActive>
                <label>ERS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>