unpackaged/main/default/objects/Account/fields/Authorize_Code__c.field-meta.xml
<CustomField>
    <fullName>Authorize_Code__c</fullName>
    <label>Authorize Code</label>
    <length>17</length>
    <type>Text</type>
</CustomField>