unpackaged/main/default/objects/Account/fields/CDX_Authorization_Message__c.field-meta.xml
<CustomField>
    <fullName>CDX_Authorization_Message__c</fullName>
    <label>CDX Authorization Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>