unpackaged/main/default/objects/Account/fields/CDX_Home_Lockout_Entitled__c.field-meta.xml
<CustomField>
    <fullName>CDX_Home_Lockout_Entitled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CDX Home Lockout Entitled</label>
    <type>Checkbox</type>
</CustomField>