unpackaged/main/default/objects/Account/fields/CDX_Long_Tow_Entitled__c.field-meta.xml
<CustomField>
    <fullName>CDX_Long_Tow_Entitled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CDX Long Tow Entitled</label>
    <type>Checkbox</type>
</CustomField>