unpackaged/main/default/objects/Account/fields/CDX_Membership_Level__c.field-meta.xml
<CustomField>
    <fullName>CDX_Membership_Level__c</fullName>
    <label>CDX Membership Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>B</fullName>
                <label>Classic /Basic</label>
            </value>
            <value>
                <fullName>P</fullName>
                <label>Plus</label>
            </value>
            <value>
                <fullName>R</fullName>
                <label>Plus RV</label>
            </value>
            <value>
                <fullName>E</fullName>
                <label>Premier</label>
            </value>
            <value>
                <fullName>V</fullName>
                <label>Premier RV</label>
            </value>
            <value>
                <fullName>Basic</fullName>
                <isActive>false</isActive>
                <label>Basic</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>