unpackaged/main/default/objects/Account/fields/Census_Block__c.field-meta.xml
<CustomField>
    <fullName>Census_Block__c</fullName>
    <label>Census Block</label>
    <length>255</length>
    <type>Text</type>
</CustomField>