unpackaged/main/default/objects/Account/fields/Club_Code1__c.field-meta.xml
<CustomField>
    <fullName>Club_Code1__c</fullName>
    <label>Club Code</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Club_Name1__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Club_Code</valueSetName>
    </valueSet>
</CustomField>