unpackaged/main/default/objects/Account/fields/Contact_Object_ID_MDM__c.field-meta.xml
<CustomField>
    <fullName>Contact_Object_ID_MDM__c</fullName>
    <description>New field to be populated with MDM ID to assist with integrations.</description>
    <externalId>true</externalId>
    <label>Contact Object ID</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>