unpackaged/main/default/objects/Account/fields/Country_FIPS__c.field-meta.xml
<CustomField>
    <fullName>Country_FIPS__c</fullName>
    <label>Country FIPS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>