unpackaged/main/default/objects/Account/fields/Delivery_Point_Barcode__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Point_Barcode__c</fullName>
    <label>Delivery Point Barcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>