unpackaged/main/default/objects/Account/fields/ERS_Club__c.field-meta.xml
<CustomField>
    <fullName>ERS_Club__c</fullName>
    <label>Facility Parent Club</label>
    <length>255</length>
    <type>Text</type>
</CustomField>