unpackaged/main/default/objects/Account/fields/ERS_Towing_Area__c.field-meta.xml
<CustomField>
    <fullName>ERS_Towing_Area__c</fullName>
    <inlineHelpText>ERS Towing Area</inlineHelpText>
    <label>Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
            </value>
            <value>
                <fullName>02</fullName>
            </value>
            <value>
                <fullName>03</fullName>
            </value>
            <value>
                <fullName>04</fullName>
            </value>
            <value>
                <fullName>TowMark</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>