unpackaged/main/default/objects/Account/fields/Facility_ID__c.field-meta.xml
<CustomField>
    <fullName>Facility_ID__c</fullName>
    <externalId>true</externalId>
    <label>Facility ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>