unpackaged/main/default/objects/Account/fields/Information__c.field-meta.xml
<CustomField>
    <fullName>Information__c</fullName>
    <description>Information regarding approved garage operation details</description>
    <inlineHelpText>Information regarding approved garage operation details</inlineHelpText>
    <label>Information</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>